--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -7,18 +7,26 @@
     padding-bottom: 205px;
 
     &_slider {
-        left: 55%;
-        top: -370px;
+        left: 45%;
+        top: -500px;
         position: relative;
-        width: 400px;
-        height: 400px;
+        width: 700px;
+        height: 700px;
         // background: #C96567;
-        overflow: hidden;
+        // overflow: hidden;
         // animation: animate 5s linear infinite;
 
         img {
-            max-width: 100%;
-            max-height: 100%;
+            max-width: 80%;
+            max-height: 80%;
+        }
+
+        &_lines {
+            position: absolute;
+            left: 100px;
+            top: 35px;
+            max-width: 500%;
+            max-height: 500%;
         }
 
         // @keyframes animate {
