--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -11,6 +11,10 @@ $m-button-color: #4C4B16;
 $m-text-color: #F7F1E5;
 $m-h-text-color: #E7B10A;
 
+// Цвета для иконки бургер-меню;
+$hamburher-icon-color: #4C4B16;
+$hamburher-h-icon-color: #E7B10A;
+
 // Цвета для бокового меню;
 $menu-bg-color: #4C4B16;
 $menu-overlay-color: #F7F1E5;
@@ -23,3 +27,19 @@ $sidepanel-icon-color: #4C4B16;
 $sidepanel-h-icon-color: #898121;
 $sidepanel-devider-color: #4C4B16;
 $sidepanel-text-color: #4C4B16;
+
+// Миксины
+$mixin-main-color: #4C4B16;
+$mixin-skills-color: #E7B10A;
+
+// Цвета для блока со скилами;
+$skills-main-color: #F7F1E5;
+$skills-h-color: #898121;
+$skills-text-color: #4C4B16;
+$skills-h-text: #F7F1E5;
+
+// Цвет для блока с работами;
+$portfolio-bg-color: #4C4B16;
+
+// Цвет для блок с контактами;
+$contacts-h-icons-color: #4C4B16;
