--- a/sass/blocks/_portfolio.scss
+++ b/sass/blocks/_portfolio.scss
@@ -22,23 +22,64 @@
     &_wrapper {
         margin-top: 60px;
         display: grid;
-        grid-template: repeat(2, minmax(270px, auto)) / repeat(4, 270px);
-        grid-row: minmax(270px, auto);
-        gap: 10px;
-        &item {
-            &#portfolio_about {
-                grid-column-start: 3;
-                grid-column-end: 4;
-                grid-row-start: 1;
-                grid-row-end: 3;
+        grid-template: repeat(2, 280px) / repeat(4, 280px);
+        grid-row: 280px;
+        gap: 5px;
+
+        .vertical {
+            grid-row: 1 / 3;
+            grid-column: 4 / 5;
+        }
+
+        .about_port {
+            grid-row: 2 / 3;
+            grid-column: 2 / 4;
+            background-color: $portfolio-bg-color;
+
+            h3 {
+                margin-top: 20px;
+                text-align: center;
+                margin-bottom: 0;
+                color: $skills-h-text;
+                transition: all 0.6s;
+            }
+
+            p {
+                display: block;
+                margin-top: 10px;
+                margin-bottom: 0;
+                font-size: 18px;
+                line-height: 23px;
+                text-align: center;
+                color: $skills-h-text;
+                transition: all 0.6s;
             }
         }
-        // justify-content: space-between;
-        // align-content: space-between;
-        // &_item {
-        // }
-        // &_item &_about {
-
-        // }
     }
+
+    &_item {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        &:hover {
+            transform: scale(1.05);
+            transition: all 0.6s;
+        }
+    }
+
+    //     &#portfolio_about {
+    //         grid-column-start: 3;
+    //         grid-column-end: 4;
+    //         grid-row-start: 1;
+    //         grid-row-end: 3;
+    //     }
+    // }
+
+    // justify-content: space-between;
+    // align-content: space-between;
+    // &_item {
+    // }
+    // &_item &_about {
+
+    // }
 }
