--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -31,9 +31,21 @@ $sidepanel-text-color: #4C4B16;
 // Миксины
 $mixin-main-color: #4C4B16;
 $mixin-skills-color: #E7B10A;
+$mixin-resume-color: #E7B10A;
+$mixin-contacts-color: #E7B10A;
+
+$mixin-center-color: #E7B10A;
+$mixin-left-color: #4C4B16;
+$mixin-item-color: #4C4B16;
+
+// Цвета для блока с образованием и опытом;
+$resume-main-color: #4C4B16;
+$resume-text-color: #F7F1E5;
 
 // Цвета для блока со скилами;
 $skills-main-color: #F7F1E5;
+$raitings-color: #E7B10A;
+$raitings-h-color: #4C4B16;
 $skills-h-color: #898121;
 $skills-text-color: #4C4B16;
 $skills-h-text: #F7F1E5;
