--- a/sass/blocks/_portfolio.scss
+++ b/sass/blocks/_portfolio.scss
@@ -2,28 +2,30 @@
     margin-top: 120px;
     padding: 0 0 30px 0;
 
-    &_title {
+    &__title {
         position: relative;
         text-align: center;
-        @include before_rectangle;
+        @include before_center_rectangle;
 
         &:before {
-            width: 20px;
-            height: 20px;
-            top: 2px;
-            left: 511px;
+            width: 15px;
+            height: 15px;
+            top: 3px;
+            left: 50%;
+            transform: translate(-50%);
+            background: $mixin-skills-color;
         }
     }
 
-    &_subtitle {
+    &__subtitle {
         text-align: center;
     }
 
-    &_wrapper {
+    &__wrapper {
         margin-top: 60px;
         display: grid;
         grid-template: repeat(2, 280px) / repeat(4, 280px);
-        grid-row: 280px;
+        grid-auto-rows: 280px;
         gap: 5px;
 
         .vertical {
@@ -31,55 +33,91 @@
             grid-column: 4 / 5;
         }
 
-        .about_port {
+        .about-port {
             grid-row: 2 / 3;
             grid-column: 2 / 4;
             background-color: $portfolio-bg-color;
 
             h3 {
-                margin-top: 20px;
+                margin-top: 20%;
                 text-align: center;
                 margin-bottom: 0;
                 color: $skills-h-text;
+                transform: translateY(-50%);
                 transition: all 0.6s;
             }
 
             p {
-                display: block;
                 margin-top: 10px;
                 margin-bottom: 0;
-                font-size: 18px;
-                line-height: 23px;
+                font-size: 16px;
+                line-height: 19px;
                 text-align: center;
                 color: $skills-h-text;
                 transition: all 0.6s;
             }
         }
+
     }
 
-    &_item {
+    &__item {
         width: 100%;
         height: 100%;
         object-fit: cover;
+
         &:hover {
             transform: scale(1.05);
             transition: all 0.6s;
         }
     }
+}
 
-    //     &#portfolio_about {
-    //         grid-column-start: 3;
-    //         grid-column-end: 4;
-    //         grid-row-start: 1;
-    //         grid-row-end: 3;
-    //     }
-    // }
+@media (max-width: 1295px) {
+    .portfolio {
+        padding: auto;
 
-    // justify-content: space-between;
-    // align-content: space-between;
-    // &_item {
-    // }
-    // &_item &_about {
+        &__wrapper {
+            grid-template: none;
+            grid-template-columns: repeat(auto-fit, 280px);
+            grid-auto-rows: 280px;
+            justify-content: center;
+            row-gap: 35px;
 
-    // }
+            .about-vertical {
+                grid-row: unset;
+                grid-column: unset;
+                overflow: hidden;
+            }
+
+            .about-port {
+                grid-row: unset;
+                grid-column: unset;
+                overflow: hidden;
+            }
+        }
+    }
+}
+
+@media (max-width: 992px) {}
+
+@media (max-width: 768px) {
+
+    .portfolio {
+        margin-top: 50px;
+    }
+}
+
+@media (max-width: 576px) {
+
+    .portfolio {
+        margin-top: 50px;
+
+        &__item {
+
+            &:hover {
+                transform: scale(1.0);
+                transition: all 0.6s;
+            }
+        }
+    }
 }
