--- a/sass/blocks/_title.scss
+++ b/sass/blocks/_title.scss
@@ -1,29 +1,101 @@
 .title {
-    font-weight: bold;
-    font-size: 36px;
-    line-height: 60px;
 
-    &_fz14 {
-        font-size: 14px;
-        line-height: 21px;
+    &__fz12 {
+        font-size: 12px;
+        line-height: 14px;
     }
 
-    &_fz18 {
-        font-size: 18px;
-        line-height: 23px;
+    &__fz16 {
+        font-size: 16px;
+        line-height: 19px;
     }
 
-    &_fz24 {
+    &__fz16-b {
+        font-weight: bold;
+        font-size: 16px;
+        line-height: 19px;
+    }
+
+    &__fz20 {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    &__fz24 {
         font-size: 24px;
-        line-height: 31px;
+        line-height: 28px;
     }
 
-    &_fz36 {
+    &__fz24-b {
+        font-weight: bold;
+        font-size: 24px;
+        line-height: 28px;
+    }
+
+    &__fz28 {
+        font-size: 28px;
+        line-height: 33px;
+    }
+
+    &__fz32 {
+        font-size: 32px;
+        line-height: 38px;
+    }
+
+    &__fz36 {
         font-size: 36px;
+        line-height: 43px;
     }
 
-    &_fz48 {
+    &__fz36-b {
+        font-weight: bold;
+        font-size: 36px;
+        line-height: 43px
+    }
+
+    &__fz40 {
+        font-size: 40px;
+        line-height: 47px;
+    }
+
+    &__fz44 {
+        font-size: 44px;
+        line-height: 52px;
+    }
+
+    &__fz48 {
         font-size: 48px;
+        line-height: 57px;
     }
 
+    &__fz48-b {
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 57px;
+    }
+}
+
+// Адаптация шрифтов
+
+@media (max-width: 1295px) {
+    .title {
+
+        &__fz20 {
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 19px;
+        }
+
+        &__fz24-b {
+            font-weight: bold;
+            font-size: 16px;
+            line-height: 19px;
+        }
+
+        &__fz48-b {
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 43px
+        }
+    }
 }
