--- a/sass/blocks/_about.scss
+++ b/sass/blocks/_about.scss
@@ -1,7 +1,7 @@
 .about {
     padding-top: 120px;
 
-    &_wrapper {
+    &__wrapper {
         display: grid;
         grid-template-columns: 400px 670px;
         grid-template-rows: minmax(250px auto) minmax(260px auto);
@@ -10,7 +10,7 @@
         row-gap: 40px;
     }
 
-    &_img {
+    &__img {
         grid-row: 1/3;
 
         img {
@@ -20,65 +20,192 @@
         }
     }
 
-    &_descr {
+    &__descr {
         .divider {
-            margin: 0;
+            margin: 15px -5px 0 0;
         }
     }
 
-    &_title {
+    &__title {
         position: relative;
         padding-left: 10px;
         z-index: 2;
+        @include before_left_rectangle;
+
         &:before {
-            content: '';
-            position: absolute;
-            z-index: -1;
-            top: 1px;
-            left: 13px;
-            width: 20px;
-            height: 20px;
-            background: $main-color;
-            transform: translateX(-50%);
+            top: 2px;
+            left: 12px;
+            width: 15px;
+            height: 15px;
+            transform: translateX(-40%);
         }
     }
 
-    &_text {
+    &__text {
         margin-top: 20px;
-        font-size: 18px;
-        line-height: 18px;
     }
 
-    &_skills {
+    &__skills {
         display: grid;
         grid-template: repeat(2, minmax(115px, auto)) / repeat(2, 260px);
         grid-auto-rows: 1fr;
         column-gap: 50px;
         row-gap: 20px;
 
-        &_item {
+        &-item {
             display: grid;
             grid-template-columns: 40px 200px;
             column-gap: 20px;
         }
 
-        &_rectangle {
+        &-rectangle {
             position: relative;
-            // padding: 15px 0 0 15px;
-            @include before_rectangle;
+            @include before_item_rectangle;
+
             &:before {
                 top: -5px;
-                left: -5px;
+                left: 15px;
             }
+
             img {
-                filter: invert(100%); 
+                filter: invert(100%);
             }
         }
-        &_text {
-            margin-top: 5px;
-            font-size: 14px;
-            line-height: 21px;
 
+        &-text {
+            margin-top: 15px;
+
+        }
+    }
+}
+
+// Адаптация данного блока;
+
+@media (max-width: 1295px) {
+
+    .about {
+
+        &-rectangle {
+
+            &:before {
+                width: 30px;
+                height: 30px;
+            }
+
+            img {
+                position: relative;
+                top: 7px;
+                left: 5px;
+                height: 20px;
+                width: 20px;
+                filter: invert(100%);
+            }
+        }
+
+        &__wrapper {
+            grid-template-columns: 400px 520px;
+            column-gap: 40px;
+            overflow: hidden;
+        }
+
+        &__skills {
+            column-gap: 20px;
+            grid-template: repeat(2, minmax(115px, auto))/repeat(2, 250px);
+
+            &-item {
+                grid-template-columns: 40px 195px;
+                column-gap: 15px;
+            }
+        }
+    }
+}
+
+@media (max-width: 992px) {
+
+    .about {
+        &__wrapper {
+            grid-template-columns: 300px 380px;
+        }
+
+        &__skills {
+            grid-template-columns: 380px;
+            grid-auto-rows: minmax(115px, auto);
+
+            &-item {
+                grid-template-columns: 40px 320px;
+                column-gap: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .about {
+        padding-top: 40px;
+
+        &__wrapper {
+            grid-template: 400px auto auto / 1fr;
+        }
+
+        &__img {
+            grid-row: unset;
+        }
+
+        &__skills {
+            grid-template-columns: repeat(2, 260px);
+
+            &-item {
+                grid-template-columns: 40px 200px;
+                column-gap: 20px;
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+
+    .about {
+        padding-top: 50px;
+
+        &__wrapper {
+            grid-template: 340px auto auto / 1fr;
+            row-gap: 25px;
+        }
+
+        &__text {
+            font-size: 16px;
+            line-height: 19px;
+            padding-right: 30px;
+
+            p {
+                margin: 0;
+            }
+        }
+
+        &__skills {
+            grid-template-columns: 1fr;
+
+            &-item {
+                column-gap: 10px;
+                grid-template-columns: 40px 280px;
+            }
+
+            .title {
+                font-size: 16px;
+                line-height: 21px;
+            }
+
+            &-text {
+                font-size: 12px;
+                line-height: 14px;
+            }
+        }
+
+        &__descr {
+            .divider {
+                margin-top: 15px;
+            }
         }
     }
 }
