--- a/sass/blocks/_promo.scss
+++ b/sass/blocks/_promo.scss
@@ -53,15 +53,16 @@
         }
     }
 
-    &_slider {
+    &__m_item {
+        display: none;
+    }
+
+    &__slider {
         left: 45%;
         top: -500px;
         position: relative;
         width: 700px;
         height: 700px;
-        // background: #C96567;
-        // overflow: hidden;
-        // animation: animate 5s linear infinite;
 
         &_item {
             position: absolute;
@@ -77,7 +78,7 @@
             top: 120px;
             max-width: 80%;
             max-height: 80%;
-            color: black;
+            color: #000;
             opacity: 0.9;
 
             #lines_2 {
@@ -85,92 +86,24 @@
                 margin-left: -40px;
                 opacity: 0.8;
             }
-
-            // #lines_3 {
-            //     margin-top: -80px;
-            //     margin-left: -120px;
-            //     opacity: 0.6;
-            // }
         }
-
-        // @keyframes animate {
-        //     0% {
-        //         transform: rotate(0deg);
-        //     }
-
-        //     100% {
-        //         transform: rotate(360deg);
-        //     }
-        // }
     }
 
-    //     &:before {
-    //         content: '';
-    //         position: absolute;
-    //         inset: -10px 140px;
-    //         background: linear-gradient(315deg, #C96567, #99C965, #65C9C7, #9565C9);
-    //         transition: all 0.7s;
-    //         animation: animate 5s linear infinite;
-    //     }
-
-    //     &:hover:before {
-    //         inset: -20px 0px;
-    //     }
-
-    //     @keyframes animate {
-    //         0% {
-    //             transform: rotate(0deg);
-    //         }
-
-    //         100% {
-    //             transform: rotate(360deg);
-    //         }
-    //     }
-
-    //     &:after {
-    //         content: '';
-    //         position: absolute;
-    //         inset: 6px;
-    //         background: #743A3B;
-    //         border-radius: 50%;
-    //         z-index: 1;
-    //     }
-
-    //     &-content {
-    //         position: absolute;
-    //         inset: 30px;
-    //         border: 3px solid #fff;
-    //         z-index: 2;
-    //         border-radius: 50%;
-    //         overflow: hidden;
-
-    //         img {
-    //             position: absolute;
-    //             z-index: 10;
-    //             width: 100%;
-    //             height: 100%;
-    //             object-fit: cover;
-    //             transition: all 1s;
-    //             pointer-events: none;
-    //         }
-    //     }
-    // }
-
-    &_title {
+    &__title {
         width: 535px;
         margin-top: 10px;
         color: $m-text-color;
     }
 
-    &_subtitle {
+    &__subtitle {
         position: relative;
         padding-left: 10px;
         z-index: 2;
         color: $m-text-color;
-        @include m_before_rectangle;
+        @include before_left_rectangle;
     }
 
-    &_btns {
+    &__btns {
         margin-top: 25px;
         display: flex;
         width: 280px;
@@ -178,8 +111,437 @@
         justify-content: space-between;
     }
 
-    &_link {
+    &__link {
         color: $m-text-color;
         font-weight: bold;
+    }
+}
+
+// Адаптация этого блока;
+
+@media (max-width: 1295px) {
+    .promo {
+        position: relative;
+
+        &__container {
+            width: 960px;
+            top: 50%;
+            transform: translate(0%, 0%);
+        }
+
+        &__slider {
+            display: none;
+        }
+
+        &__m_item {
+            position: relative;
+            display: flex;
+            top: 50%;
+            left: 50%;
+            transform: translate(25%, -100%);
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            overflow: hidden;
+            justify-self: center;
+            align-items: center;
+            background: $m-background-color;
+
+            &:before {
+                content: '';
+                position: absolute;
+                inset: -3px 80px;
+                background: linear-gradient(315deg, #F7F1E5, #F7F1E5);
+                transition: all 0.7s;
+                animation: animate_1 5s linear infinite;
+            }
+
+            @keyframes animate_1 {
+                0% {
+                    transform: rotate(0deg);
+                }
+
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                inset: 5px;
+                background: $m-background-color;
+                border-radius: 50%;
+                z-index: 1;
+            }
+
+            &-content {
+                position: absolute;
+                inset: 10px;
+                border: 3px solid $m-text-color;
+                z-index: 3;
+                border-radius: 50%;
+                overflow: hidden;
+
+                img {
+                    position: absolute;
+                    z-index: 5;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transition: all 0.7s;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 992px) {
+
+    .promo {
+        padding-bottom: 15px;
+        max-height: 720px;
+
+        &__container {
+            position: relative;
+            top: 50%;
+        }
+
+        &__title {
+            width: 425px;
+        }
+
+        &__slider {
+            display: none;
+        }
+
+        &__m_item {
+            position: relative;
+            display: flex;
+            top: 50%;
+            left: 50%;
+            transform: translate(25%, -100%);
+            width: 300px;
+            height: 300px;
+            border-radius: 50%;
+            overflow: hidden;
+            justify-self: center;
+            align-items: center;
+            background: $m-background-color;
+
+            &:before {
+                content: '';
+                position: absolute;
+                inset: -3px 80px;
+                background: linear-gradient(315deg, #F7F1E5, #F7F1E5);
+                transition: all 0.7s;
+                animation: animate_1 5s linear infinite;
+            }
+
+            @keyframes animate_1 {
+                0% {
+                    transform: rotate(0deg);
+                }
+
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                inset: 5px;
+                background: $m-background-color;
+                border-radius: 50%;
+                z-index: 1;
+            }
+
+            &-content {
+                position: absolute;
+                inset: 10px;
+                border: 3px solid $m-text-color;
+                z-index: 3;
+                border-radius: 50%;
+                overflow: hidden;
+
+                img {
+                    position: absolute;
+                    z-index: 5;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transition: all 0.7s;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .promo {
+        padding-bottom: 15px;
+        max-height: 540px;
+
+        &__container {
+            position: relative;
+            top: 50%;
+            transform: translate(0%, -20%);
+        }
+
+        .hamburger {
+            height: 15px;
+            top: 25px;
+            left: 20px;
+
+            &_item {
+                width: 20px;
+                height: 3px;
+            }
+
+            &.hamburger-active {
+
+                position: fixed;
+
+                .hamburger_item {
+                    background-color: $hamburher-h-icon-color;
+                }
+
+                span:nth-child(1) {
+                    transform: translate(4px, -1px) rotate(45deg);
+                    transform-origin: left top;
+                    transition: all 0.6s;
+                }
+
+                span:nth-child(2) {
+                    transform: scale(0);
+                    transition: all 0.6s;
+                }
+
+                span:nth-child(3) {
+                    transform: translate(-2px, -14px) rotate(-45deg);
+                    transform-origin: right bottom;
+                    transition: all 0.6s;
+                }
+            }
+        }
+
+        &__title {
+            margin-top: 20px;
+            width: 290px;
+        }
+
+        &__btns {
+            margin-top: 20px;
+            width: 250px;
+            height: 50px;
+        }
+
+        &__link {
+            font-size: 14px;
+            line-height: 21px;
+        }
+
+        &__slider {
+            display: none;
+        }
+
+        &__m_item {
+            position: relative;
+            display: flex;
+            top: 50%;
+            left: 50%;
+            transform: translate(25%, -135%);
+            width: 220px;
+            height: 220px;
+            border-radius: 50%;
+            overflow: hidden;
+            justify-self: center;
+            align-items: center;
+            background: $m-background-color;
+
+            &:before {
+                content: '';
+                position: absolute;
+                inset: -3px 80px;
+                background: linear-gradient(315deg, #F7F1E5, #F7F1E5);
+                transition: all 0.7s;
+                animation: animate_1 5s linear infinite;
+            }
+
+            @keyframes animate_1 {
+                0% {
+                    transform: rotate(0deg);
+                }
+
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                inset: 5px;
+                background: $m-background-color;
+                border-radius: 50%;
+                z-index: 1;
+            }
+
+            &-content {
+                position: absolute;
+                inset: 10px;
+                border: 3px solid $m-text-color;
+                z-index: 3;
+                border-radius: 50%;
+                overflow: hidden;
+
+                img {
+                    position: absolute;
+                    z-index: 5;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transition: all 0.7s;
+                    pointer-events: none;
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+
+    .promo {
+        padding-bottom: 15px;
+        max-height: 100vh;
+
+        &__container {
+            display: block;
+            top: 50%;
+            transform: translate(0, 50%);
+        }
+
+        .hamburger {
+            height: 15px;
+            top: 25px;
+            left: 20px;
+
+            &_item {
+                width: 20px;
+                height: 3px;
+            }
+
+            &.hamburger-active {
+
+                position: fixed;
+
+                .hamburger_item {
+                    background-color: $hamburher-h-icon-color;
+                }
+
+                span:nth-child(1) {
+                    transform: translate(4px, -1px) rotate(45deg);
+                    transform-origin: left top;
+                    transition: all 0.6s;
+                }
+
+                span:nth-child(2) {
+                    transform: scale(0);
+                    transition: all 0.6s;
+                }
+
+                span:nth-child(3) {
+                    transform: translate(-2px, -14px) rotate(-45deg);
+                    transform-origin: right bottom;
+                    transition: all 0.6s;
+                }
+            }
+        }
+
+        &__title {
+            margin-top: 20px;
+            width: 290px;
+        }
+
+        &__btns {
+            margin-top: 20px;
+            width: 250px;
+            height: 50px;
+        }
+
+        &__link {
+            font-size: 14px;
+            line-height: 21px;
+        }
+
+        &__slider {
+            display: none;
+        }
+
+        &__m_item {
+            position: relative;
+            display: flex;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -175%);
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            overflow: hidden;
+            justify-self: center;
+            align-items: center;
+            background: $m-background-color;
+
+            &:before {
+                content: '';
+                position: absolute;
+                inset: -3px 80px;
+                background: linear-gradient(315deg, #F7F1E5, #F7F1E5);
+                transition: all 0.7s;
+                animation: animate_1 5s linear infinite;
+            }
+
+            @keyframes animate_1 {
+                0% {
+                    transform: rotate(0deg);
+                }
+
+                100% {
+                    transform: rotate(360deg);
+                }
+            }
+
+            &:after {
+                content: '';
+                position: absolute;
+                inset: 5px;
+                background: $m-background-color;
+                border-radius: 50%;
+                z-index: 1;
+            }
+
+            &-content {
+                position: absolute;
+                inset: 10px;
+                border: 3px solid $m-text-color;
+                z-index: 3;
+                border-radius: 50%;
+                overflow: hidden;
+
+                img {
+                    position: absolute;
+                    z-index: 5;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    transition: all 0.7s;
+                    pointer-events: none;
+                }
+            }
+        }
     }
 }
