--- a/sass/blocks/_sidepanel.scss
+++ b/sass/blocks/_sidepanel.scss
@@ -19,16 +19,42 @@
     &_divider {
         width: 2px;
         height: 70px;
-        background-color: $sidepanel-devider-color;
+        background-color: #000;
     }
     &_text {
         height: 150px;
         width: 25px;
-        color: $sidepanel-text-color;
+        color: #000;
         span {
             transform: rotate(-90deg) translate(-30%, -260%);
             display: block;
             width: 150px;
         }
+    }
+}
+
+// Адаптация данного блока;
+
+@media (max-width: 1295px) {
+    .sidepanel {
+        display: none;
+    }
+}
+
+@media (max-width: 992px) {
+    .sidepanel {
+        display: none;
+    }
+}
+
+@media (max-width: 768px) {
+    .sidepanel {
+        display: none;
+    }
+}
+
+@media (max-width: 576px) {
+    .sidepanel {
+        display: none;
     }
 }
