--- a/sass/blocks/_skills.scss
+++ b/sass/blocks/_skills.scss
@@ -1,24 +1,26 @@
 .skills {
     margin-top: 120px;
 
-    &_title {
+    &__title {
         position: relative;
         text-align: center;
-        @include s_before_rectangle;
+        @include before_center_rectangle;
 
         &:before {
-            width: 20px;
-            height: 20px;
-            top: 1px;
-            left: 528px;
+            width: 15px;
+            height: 15px;
+            top: 5px;
+            left: 50%;
+            transform: translate(-50%);
+            background: $mixin-skills-color;
         }
     }
 
-    &_subtitle {
+    &__subtitle {
         text-align: center;
     }
 
-    &_block {
+    &__block {
         margin-top: 60px;
         padding: 0 10px;
         display: grid;
@@ -27,7 +29,7 @@
         gap: 10px;
     }
 
-    &_item {
+    &__item {
         padding: 30px 30px 25px 30px;
         border: 2px solid black;
 
@@ -81,7 +83,7 @@
         }
     }
 
-    &_ratings {
+    &__ratings {
         margin-top: 120px;
         display: grid;
         grid-template: repeat(2, minmax(70px, auto)) / repeat(3, 350px);
@@ -98,7 +100,6 @@
         &-title {
             position: relative;
             padding: 2px 0 0 13px;
-            @include s_before_rectangle;
         }
 
         &-counter {
@@ -109,16 +110,185 @@
         &-line {
             width: 350px;
             height: 14px;
-            background-color: #E8E4DE;
+            background-color: $raitings-color;
             border-radius: 4px;
             grid-column: 1 / 3;
 
             span {
                 display: block;
                 height: 100%;
-                background-color: #314455;
+                background-color: $raitings-h-color;
                 border-radius: 4px;
                 transition: all 0.8s;
+            }
+        }
+    }
+}
+
+@media (max-width: 1295px) {
+
+    .skills {
+
+        margin-top: 25px;
+
+        &__item {
+
+            &:hover {
+                border: none;
+                transition: none;
+                transform: none;
+                border: 2px solid black;
+
+                h3 {
+                    margin-top: 15px;
+                    margin-bottom: 0px;
+                    color: $skills-h-text;
+                }
+
+                p {
+                    margin-top: 15px;
+                }
+
+                img {
+                    margin-top: 0px;
+                }
+            }
+        }
+
+        &__block {
+            grid-template-columns: repeat(auto-fit, 270px);
+            justify-content: space-evenly;
+        }
+
+        &__ratings {
+            grid-template-columns: repeat(auto-fit, 350px);
+            grid-auto-rows: minmax(70px, auto);
+            justify-content: space-between;
+            padding: 0 30px;
+        }
+    }
+}
+
+@media (max-width: 992px) {
+
+    .skills {
+
+        margin-top: 25px;
+
+        &__items {
+            padding: 0 20px;
+        }
+
+        &__ratings {
+            grid-template-columns: repeat(auto-fit, 320px);
+            justify-content: space-evenly;
+            padding: 0;
+            column-gap: 0;
+
+            &-line {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 768px) {
+
+    .skills {
+        padding-top: 25px;
+
+        &__block {
+            grid-template-columns: repeat(auto-fit, 270px);
+            justify-content: space-between;
+            padding: 0;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        &__ratings {
+            grid-template-columns: repeat(auto-fit, 320px);
+            grid-auto-rows: minmax(70px, auto);
+            justify-content: center;
+            margin-top: 40px;
+
+            &-line {
+                width: 100%;
+            }
+        }
+    }
+}
+
+@media (max-width: 576px) {
+
+    .skills {
+        margin-top: 15px;
+
+        &__title {
+            font-size: 16px;
+            line-height: 24px;
+        }
+
+        &__subtitle {
+            font-size: 24px;
+            line-height: 36px;
+        }
+
+        &__block {
+            margin-top: 50px;
+            grid-template: none;
+            grid-template-columns: repeat(auto-fit, 300px);
+            justify-content: center;
+            gap: 15px;
+        }
+
+        &__item {
+
+            &:hover {
+                border: none;
+                transition: none;
+                transform: none;
+                border: 2px solid black;
+
+                h3 {
+                    margin-top: 15px;
+                    margin-bottom: 0px;
+                    color: $skills-h-text;
+                }
+
+                p {
+                    margin-top: 15px;
+                }
+
+                img {
+                    margin-top: 0px;
+                }
+            }
+
+            &-img {
+                position: relative;
+                transform: translate(-50%);
+                left: 50%;
+            }
+
+            h3 {
+                font-size: 14px;
+                line-height: 21px;
+            }
+        }
+
+        &__ratings {
+            margin-top: 50px;
+            grid-template: none;
+            grid-template-columns: repeat(auto-fit, 300px);
+
+            &-title {
+                font-size: 14px;
+                line-height: 21px;
+            }
+
+            &-counter {
+                font-size: 14px;
+                line-height: 21px;
             }
         }
     }
